# osmnx-secoma

./: .gitignore  main.ipynb  pyproject.toml  secoma.ipynb  secoma.qgz  seicomart.geojson  seicomart.gpkg  seicomart_350m_walk_edges.gpkg-shm  seicomart_350m_walk_polygons.gpkg  seicomart_350m_walk_polygons.gpkg-shm  seicomart_350m_walk_polygons.gpkg-wal
osmnx_secoma/: secoma.qgz
